name:                many-doc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jcolemang/many-doc#readme
author:              James Coleman Gibson
maintainer:          example@example.com
copyright:           2017 James Coleman Gibson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable many-doc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , mtl
                     , lens
                     , transformers
                     , process
                     , directory
                     , path
                     , exceptions
  other-modules:       Parser
                     , ParseTree
                     , Eval
                     , LatexDocs
